<resources>
    <string name="app_name">TODO List</string>
    <string name="addTaskButton">Add task</string>
    <string name="addTaskActivityTitle">Add new task</string>
    <string name="task_name_hint">Task name</string>
    <string name="task_date_hint">Task date</string>
    <string name="task_date_button">Set date</string>
    <string name="task_time_hint">Task time</string>
    <string name="task_time_button">Set time</string>
    <string name="add_task_button">Add</string>
    <string name="task_name">TextView</string>
    <string name="taskDate"/>
    <string name="taskPriority"/>
    <string name="task_time"/>
    <string name="string_task_time"/>
    <string name="taskImage"/>
    <string name="sort_button">sort</string>
    <string name="desc_sort_check_box">desc</string>
    <string-array name="task_types">
        <item>Home</item>
        <item>Work</item>
        <item>Studies</item>
        <item>Hobby</item>
        <item>Other</item>
    </string-array>
    <string-array name="task_priorities">
        <item>I</item>
        <item>II</item>
        <item>III</item>
        <item>IV</item>
        <item>V</item>
    </string-array>
    <string-array name="sort_types">
        <item>Type</item>
        <item>Priority</item>
        <item>Date</item>
        <item>Name</item>
    </string-array>
</resources>
