<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/addTaskActivityTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/addTaskActivityTitle" android:textSize="36sp"
                android:textAlignment="center" android:textStyle="bold" android:textColor="#000"/>
        <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/taskName" android:hint="@string/task_name_hint" android:autofillHints="" android:textSize="24sp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/taskDate" android:layout_weight="1" android:hint="@string/task_date_hint"
                    android:textSize="24sp" android:autofillHints="" android:editable="true"/>
            <Button
                    android:text="@string/task_date_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/setDateButton" android:layout_weight="1"
                    android:onClick="onDateButtonClick"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="time"
                    android:ems="10"
                    android:id="@+id/taskTime" android:layout_weight="1" android:hint="@string/task_time_hint"
                    android:textSize="24sp" android:autofillHints="" android:editable="true"/>
            <Button
                    android:text="@string/task_time_button"
                    android:layout_width="wrap_content"
                    android:onClick="onTimeButtonClick"
                    android:layout_height="wrap_content" android:id="@+id/taskTimeButton" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:gravity="center_horizontal">
            <Button
                    android:text="@string/add_task_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/addTaskButton"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>