<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:gravity="center_horizontal">
        <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/tasksList" android:layout_weight="1"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:gravity="center_horizontal" android:layout_margin="10dp">
            <CheckBox
                    android:text="@string/desc_sort_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/descSortCheckBox" android:layout_weight="1"
                    android:checked="false" android:clickable="true"/>
            <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/sortSpinner" android:layout_weight="1"/>
            <Button
                    android:text="@string/sort_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/sortButton" android:layout_weight="1"
                    android:background="#0f0" android:layout_marginRight="20dp" android:onClick="onSortButtonClick"/>
            <Button
                    android:text="@string/addTaskButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/button"
                    style="@style/Widget.AppCompat.Button.Borderless" android:onClick="onAddTaskButtonClick"
                    android:background="#f00" android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>